[package]
authors = ["Carter Reeb <carter2k4@pm.me>"]
edition = "2018"
name = "tide-webserver"
version = "0.3.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
tide-rustls = "0.2.0"
async-std = { version = "1.9.0", features = ["attributes"] }

colored = "2.0.0"
once_cell = "*"
openssl = {version = "0.10", features = ["v110"]}
crossbeam = "0.8.0"
